{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 102,
  "lineage": "8b00e56d-71d6-1c24-04fb-374ead188122",
  "resources": [
    {
      "module": "module.agent_cluster.module.efs.module.efs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cbd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:security-group/sg-0ec4f1106acfea179",
            "description": "EFS Security Group",
            "egress": [],
            "id": "sg-0ec4f1106acfea179",
            "ingress": [],
            "name": "-20230730150436497400000012",
            "name_prefix": "-",
            "owner_id": "343806850935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liran-demo-state-efs"
            },
            "tags_all": {
              "Name": "liran-demo-state-efs"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.my_eks",
            "module.agent_cluster.data.aws_eks_cluster.my_eks",
            "module.agent_cluster.module.efs.data.aws_eks_cluster.cluster",
            "module.agent_cluster.module.eks.data.aws_subnets.private",
            "module.agent_cluster.module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.agent_cluster.module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.before_compute",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_cluster.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.node",
            "module.agent_cluster.module.eks.module.eks.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_session_context.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.data.tls_certificate.this",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.time_sleep.this",
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.agent_cluster.module.vpc.module.vpc.aws_customer_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_network_acl.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_route_table.default",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_security_group.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_eip.nat",
            "module.agent_cluster.module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_flow_log.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_nat_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.efs.module.efs.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "keyed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "_allow_all_egress_",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2414067847",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0ec4f1106acfea179",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.my_eks",
            "module.agent_cluster.data.aws_eks_cluster.my_eks",
            "module.agent_cluster.module.efs.data.aws_eks_cluster.cluster",
            "module.agent_cluster.module.efs.module.efs.module.security_group.aws_security_group.cbd",
            "module.agent_cluster.module.efs.module.efs.module.security_group.aws_security_group.default",
            "module.agent_cluster.module.eks.data.aws_subnets.private",
            "module.agent_cluster.module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.agent_cluster.module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.before_compute",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_cluster.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.node",
            "module.agent_cluster.module.eks.module.eks.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_session_context.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.data.tls_certificate.this",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.time_sleep.this",
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.agent_cluster.module.vpc.module.vpc.aws_customer_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_network_acl.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_route_table.default",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_security_group.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_eip.nat",
            "module.agent_cluster.module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_flow_log.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_nat_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "_list_[0]",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ingress traffic to EFS from primary EKS security group",
            "from_port": 2049,
            "id": "sgrule-3083821502",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0ec4f1106acfea179",
            "security_group_rule_id": "sgr-0832a4d1b1a72ff3f",
            "self": false,
            "source_security_group_id": "sg-0ac222225c4a74c98",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_eks_cluster.my_eks",
            "module.agent_cluster.data.aws_eks_cluster.my_eks",
            "module.agent_cluster.module.efs.data.aws_eks_cluster.cluster",
            "module.agent_cluster.module.efs.module.efs.module.security_group.aws_security_group.cbd",
            "module.agent_cluster.module.efs.module.efs.module.security_group.aws_security_group.default",
            "module.agent_cluster.module.eks.data.aws_subnets.private",
            "module.agent_cluster.module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.agent_cluster.module.eks.module.eks.aws_ec2_tag.cluster_primary_security_group",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.before_compute",
            "module.agent_cluster.module.eks.module.eks.aws_eks_addon.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_cluster.this",
            "module.agent_cluster.module.eks.module.eks.aws_eks_identity_provider_config.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.agent_cluster.module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group_rule.node",
            "module.agent_cluster.module.eks.module.eks.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_eks_addon_version.this",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.agent_cluster.module.eks.module.eks.data.aws_iam_session_context.current",
            "module.agent_cluster.module.eks.module.eks.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.data.tls_certificate.this",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map.aws_auth",
            "module.agent_cluster.module.eks.module.eks.kubernetes_config_map_v1_data.aws_auth",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.fargate_profile.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_alias.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_grant.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.agent_cluster.module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.additional",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.aws_launch_template.this",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.data.aws_partition.current",
            "module.agent_cluster.module.eks.module.eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.agent_cluster.module.eks.module.eks.time_sleep.this",
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.agent_cluster.module.vpc.module.vpc.aws_customer_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_network_acl.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_route_table.default",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_security_group.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_default_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_eip.nat",
            "module.agent_cluster.module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_flow_log.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_nat_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.agent_cluster.module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.agent_cluster.module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.database",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.elasticache",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.outpost",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.redshift",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.agent_cluster.module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:security-group/sg-0b4a6dc4f1ff9702b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b4a6dc4f1ff9702b",
            "ingress": [],
            "name": "liran-demo-cluster-20230730145033352400000009",
            "name_prefix": "liran-demo-cluster-",
            "owner_id": "343806850935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liran-demo-cluster"
            },
            "tags_all": {
              "Name": "liran-demo-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:security-group/sg-0bb80c43bd0947696",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0bb80c43bd0947696",
            "ingress": [],
            "name": "liran-demo-node-20230730145033176000000008",
            "name_prefix": "liran-demo-node-",
            "owner_id": "343806850935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "liran-demo-node",
              "kubernetes.io/cluster/liran-demo": "owned"
            },
            "tags_all": {
              "Name": "liran-demo-node",
              "kubernetes.io/cluster/liran-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1939695245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4a6dc4f1ff9702b",
            "security_group_rule_id": "sgr-0b277641705ad7246",
            "self": false,
            "source_security_group_id": "sg-0bb80c43bd0947696",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.eks[0].module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4184749506",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0d5763bd478bc793c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-420454329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-079cf488aade94022",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2693296409",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-060b5bd00954d5dcc",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1774851727",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0ec3e081e6469c527",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2056661678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0be3b999b7555efda",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-506927461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0e899e31a75d710b4",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4066077830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0d58d76fc1bda1dec",
            "self": false,
            "source_security_group_id": "sg-0b4a6dc4f1ff9702b",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1475831120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-02783e34fea49ed80",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1002387075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-06a3ec8eda6922706",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2682295660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bb80c43bd0947696",
            "security_group_rule_id": "sgr-0c81265f9ebe81965",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.eks.module.eks.aws_security_group.cluster",
            "module.agent_cluster.module.eks.module.eks.aws_security_group.node",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:network-acl/acl-01b96f0f8c7a530eb",
            "default_network_acl_id": "acl-01b96f0f8c7a530eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01b96f0f8c7a530eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "343806850935",
            "subnet_ids": [
              "subnet-00c090af3650f585d",
              "subnet-00fccb47dc92ec63c",
              "subnet-01dd2fb3b36ae2b2f",
              "subnet-029c4a083ee569bd7",
              "subnet-0375d08d703024f16",
              "subnet-043abbeea034e9d95",
              "subnet-04423e002f03b0a03",
              "subnet-0947383048ca151f3",
              "subnet-0a0c30f2decf0124d",
              "subnet-0dabec1ffebf054b5"
            ],
            "tags": {
              "Name": "vpc-liran-demo-default"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-default"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:route-table/rtb-03151d51af55447ad",
            "default_route_table_id": "rtb-03151d51af55447ad",
            "id": "rtb-03151d51af55447ad",
            "owner_id": "343806850935",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "vpc-liran-demo-default"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:security-group/sg-074a8ef5eafdf20b7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-074a8ef5eafdf20b7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "343806850935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-liran-demo-default"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-default"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0515920b1212932f9",
            "domain": "vpc",
            "id": "eipalloc-0515920b1212932f9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-212-237-227.compute-1.amazonaws.com",
            "public_ip": "3.212.237.227",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-liran-demo-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:internet-gateway/igw-0b2630bf56802fff5",
            "id": "igw-0b2630bf56802fff5",
            "owner_id": "343806850935",
            "tags": {
              "Name": "vpc-liran-demo"
            },
            "tags_all": {
              "Name": "vpc-liran-demo"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0515920b1212932f9",
            "association_id": "eipassoc-0b0b0697cb9e791a0",
            "connectivity_type": "public",
            "id": "nat-098b3f850446eb219",
            "network_interface_id": "eni-0e869cd91ce7ca8a4",
            "private_ip": "172.16.8.38",
            "public_ip": "3.212.237.227",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00fccb47dc92ec63c",
            "tags": {
              "Name": "vpc-liran-demo-us-east-1a"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-us-east-1a"
            }
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_eip.nat",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095941187865dbb6a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-098b3f850446eb219",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095941187865dbb6a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_eip.nat",
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_nat_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2630bf56802fff5",
            "id": "r-rtb-02100d07d8b0f6e261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:route-table/rtb-095941187865dbb6a",
            "id": "rtb-095941187865dbb6a",
            "owner_id": "343806850935",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-liran-demo-private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:route-table/rtb-02100d07d8b0f6e26",
            "id": "rtb-02100d07d8b0f6e26",
            "owner_id": "343806850935",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "vpc-liran-demo-public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6231e5caf3c947c",
            "route_table_id": "rtb-095941187865dbb6a",
            "subnet_id": "subnet-043abbeea034e9d95"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f724fc49bcf758",
            "route_table_id": "rtb-095941187865dbb6a",
            "subnet_id": "subnet-0a0c30f2decf0124d"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012f349f50b72ac37",
            "route_table_id": "rtb-095941187865dbb6a",
            "subnet_id": "subnet-04423e002f03b0a03"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e6aadf12b6a0962",
            "route_table_id": "rtb-095941187865dbb6a",
            "subnet_id": "subnet-01dd2fb3b36ae2b2f"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02628832b41a327c3",
            "route_table_id": "rtb-095941187865dbb6a",
            "subnet_id": "subnet-00c090af3650f585d"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.private",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01efcb026193d24f0",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "subnet_id": "subnet-00fccb47dc92ec63c"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b09cb92ce416c244",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "subnet_id": "subnet-029c4a083ee569bd7"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0109d44d798513958",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "subnet_id": "subnet-0dabec1ffebf054b5"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8b1c785e39af433",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "subnet_id": "subnet-0947383048ca151f3"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4db5825f151cb9f",
            "route_table_id": "rtb-02100d07d8b0f6e26",
            "subnet_id": "subnet-0375d08d703024f16"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_route_table.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_subnet.public",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-043abbeea034e9d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043abbeea034e9d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-private-us-east-1a",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private-us-east-1a",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-0a0c30f2decf0124d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0c30f2decf0124d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-private-us-east-1b",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private-us-east-1b",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-04423e002f03b0a03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.32.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04423e002f03b0a03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-private-us-east-1c",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private-us-east-1c",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-01dd2fb3b36ae2b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.48.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01dd2fb3b36ae2b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-private-us-east-1d",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private-us-east-1d",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-00c090af3650f585d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.64.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c090af3650f585d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-private-us-east-1f",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-private-us-east-1f",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "tier": "private"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-00fccb47dc92ec63c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fccb47dc92ec63c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-public-us-east-1a",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public-us-east-1a",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-029c4a083ee569bd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.24.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029c4a083ee569bd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-public-us-east-1b",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public-us-east-1b",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-0dabec1ffebf054b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.40.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dabec1ffebf054b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-public-us-east-1c",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public-us-east-1c",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-0947383048ca151f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.56.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0947383048ca151f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-public-us-east-1d",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public-us-east-1d",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:subnet/subnet-0375d08d703024f16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.72.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0375d08d703024f16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343806850935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc-liran-demo-public-us-east-1f",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "tags_all": {
              "Name": "vpc-liran-demo-public-us-east-1f",
              "kubernetes.io/cluster/liran-demo": "shared",
              "kubernetes.io/role/elb": "1",
              "tier": "public"
            },
            "vpc_id": "vpc-0c1bb5f6db309b819"
          },
          "dependencies": [
            "module.agent_cluster.module.vpc.data.aws_ec2_instance_type_offerings.supported_azs",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc.this",
            "module.agent_cluster.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.agent_cluster.module.vpc[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:343806850935:vpc/vpc-0c1bb5f6db309b819",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-01b96f0f8c7a530eb",
            "default_route_table_id": "rtb-03151d51af55447ad",
            "default_security_group_id": "sg-074a8ef5eafdf20b7",
            "dhcp_options_id": "dopt-b10f01cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1bb5f6db309b819",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03151d51af55447ad",
            "owner_id": "343806850935",
            "tags": {
              "Name": "vpc-liran-demo"
            },
            "tags_all": {
              "Name": "vpc-liran-demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}